# APIKoop

./: Dockerfile  README.md  docker-compose.yml  env.example  equipment.json  inventory.json  orders.json  pyproject.toml  technical_maps.json
migrations/: env.py
migrations/versions/: 05ba155c88e1_equipment_add_field_date.py  2d56208d806a_update_equipment.py  2d6c719f42fb_create_table_map.py  3068b9106f71_equipment.py  450bca07b1b3_equipment_add_field_duration_hours.py  52fa47c2de56_add_column_name.py  80b471358ae1_create_order.py  98ade868fbf0_create_inventory.py  d12888eed4b8_add_part_id.py  e281b7d5002b_create_inventory.py  e8e78bb66aee_create_order.py
src/: conf.py  database.py  main.py
src/models/: equipments.py  inventories.py  maps.py  orders.py
src/pyds/: equipments.py  inventories.py  maps.py  orders.py
src/repositories/: equipments.py  inventories.py  maps.py  orders.py
src/routers/: equipments.py  inventories.py  maps.py  orders.py
src/services/: equipments.py  inventories.py  maps.py  orders.py
src/utils/: loared.py  repository.py  services.py
tests/: conftest.py
tests/api/: test_equipments.py  test_inventories.py  test_maps.py  test_orders.py
